--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
       <span class="tag">21 de Septiembre • Flores Amarillas</span>
       <h1>Ignacia <span aria-hidden="true">💛</span></h1>
       <p class="sub">
-        Dicen que las flores amarillas son para la amistad. No nos vamos a mentir, aún no llegamos ahí.
+        "Dicen que las flores amarillas son para la amistad. No nos vamos a mentir, aún no llegamos ahí.
+Pero te las mando igual, porque hasta en los malos inicios puede haber algo interesante."
       </p>
       <div class="actions">
         <button class="btn primary" onclick="toggleSpin()">▶️ Pausar/Reanudar</button>
@@ -239,3 +240,4 @@
   </script>
 </body>
 </html>
+
